java docs added / improved.